--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -7,4 +7,9 @@ spring:
     config:
       server:
         native:
-          search-locations: file:///Users/sam_huang/Desktop/ticket-grabber/config-server/src/main/resources
+          search-locations: file:///Users/sam_huang/Desktop/ticket-grabber/config-server/src/main/resources # TODO 改成自己的路徑
+
+  datasource:
+    url: jdbc:mysql://hnd1.clusters.zeabur.com:31911/ticket-grabber
+    username: root
+    password: UYV037TPkXbOc68u54t9swvpy1zK2GCq
