--- a/redis/redis-node-2.conf
+++ b/redis/redis-node-2.conf
@@ -6,6 +6,7 @@ appendonly yes
 bind 0.0.0.0
 
 # 廣告宿主機的 IP 和端口
+# TODO 換成自己的 ip
 cluster-announce-ip 192.168.0.109
 cluster-announce-port 7002
 cluster-announce-bus-port 17002
