--- a/config-server/src/main/resources/application.yaml
+++ b/config-server/src/main/resources/application.yaml
@@ -11,6 +11,6 @@ spring:
 
   # TODO 修改連線資訊
   datasource:
-    url: jdbc:mysql://hnd1.clusters.zeabur.com:31911/ticket-grabber
-    username: root
-    password: UYV037TPkXbOc68u54t9swvpy1zK2GCq
+    url: jdbc:mysql://TODO
+    username: TODO
+    password: TODO
